2 commit, swagger eklendi, servisler yazılıyor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=postgres
 spring.datasource.password=nonedA8890
 spring.jpa.properties.javax.persistence.validation.mode = none
 server.port=8083
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
