--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://olartik:5432/Northwind
+spring.datasource.url=jdbc:postgresql://northwindsql:5432/Northwind
 spring.datasource.username=postgres
 spring.datasource.password=nonedA8890
 spring.jpa.properties.javax.persistence.validation.mode = none
-server.port=8080
+server.port=8083
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
