--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://northwindsql:5432/Northwind
+spring.datasource.url=jdbc:postgresql://84.51.12.3:5432/Northwind
 spring.datasource.username=postgres
 spring.datasource.password=nonedA8890
 spring.jpa.properties.javax.persistence.validation.mode = none
